--- a/pages/user-center/user-center.wxss
+++ b/pages/user-center/user-center.wxss
@@ -55,6 +55,13 @@ page {
   color: #666;
   display: flex;
   align-items: center;
+  margin-bottom: 12rpx;
+}
+
+.info .user-id {
+  font-size: 24rpx;
+  color: #999;
+  font-family: monospace;
 }
 
 .setting {
