--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,13 +5,11 @@
     <view class="nav-bar">
       <view class="nav-left">
         <view class="logo-container">
-          <text class="logo-text">去哪</text>
-          <view class="logo-underline"></view>
+          <image class="logo-text" src="https://p0.inf.test.sankuai.com/haikesong/71b14f0fb6c8be4b2460ebad86223faf177341.gif" mode="aspectFit"></image>
         </view>
-        <text class="brand-text">Whatever</text>
       </view>
       <view class="search-btn">
-        <text class="search-icon">🔍</text>
+        <image class="search-icon" src="https://p0.inf.test.sankuai.com/haikesong/157776f28d521dccfa0b4118c95164ac1456.png" mode="aspectFit"></image>
       </view>
     </view>
 
@@ -20,46 +18,24 @@
       <view class="section">
         <view class="section-header">
           <text class="section-title">灵感专题</text>
-          <view class="more-btn">
+          <view class="more-btn" bindtap="viewMoreTopics">
             <text>更多</text>
             <text class="arrow">></text>
           </view>
         </view>
         
-        <scroll-view class="topic-scroll" scroll-x="true" enhanced="true" show-scrollbar="false">
+        <scroll-view class="topic-scroll" scroll-x="true" enhanced="true" show-scrollbar="false" >
           <view class="topic-item">
-            <view class="topic-image embassy-bg"></view>
-            <view class="topic-content">
-              <text class="topic-title">外国驻京办地图</text>
-              <view class="topic-btn">
-                <text>查看详情</text>
-                <text class="arrow">></text>
-              </view>
-            </view>
+            <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/2f1dc53abad23b9373ae0e042892d542610565.png" mode="aspectFit"></image>
           </view>
           
           <view class="topic-item">
-            <view class="topic-image hutong-bg"></view>
-            <view class="topic-content">
-              <text class="topic-title">胡同咖啡馆指南</text>
-              <view class="topic-btn">
-                <text>查看详情</text>
-                <text class="arrow">></text>
-              </view>
-            </view>
+            <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/fe9a93058bfb4556ad509dc7efe7153a603269.png" mode="aspectFit"></image>
           </view>
           
           <view class="topic-item">
-            <view class="topic-image museum-bg"></view>
-            <view class="topic-content">
-              <text class="topic-title">小众博物馆巡礼</text>
-              <view class="topic-btn">
-                <text>查看详情</text>
-                <text class="arrow">></text>
-              </view>
-            </view>
+            <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/fe9a93058bfb4556ad509dc7efe7153a603269.png" mode="aspectFit"></image>
           </view>
-
         </scroll-view>
       </view>
 
@@ -67,43 +43,69 @@
       <view class="section">
         <view class="section-header">
           <text class="section-title">我的行程</text>
-          <view class="add-btn">
-            <text class="add-icon">+</text>
-          </view>
         </view>
         
         <view class="trip-list">
           <!-- 法意12日游 -->
-          <view class="trip-item">
-            <view class="trip-image-container">
-              <image class="trip-image" src="/images/8697ecc0-3128-45f6-a9a1-ee57a5fc0e31.png" mode="aspectFill"></image>
-              <view class="trip-duration">12天</view>
-            </view>
-            <view class="trip-info">
-              <text class="trip-title">法意 12 日舒适游</text>
-              <view class="trip-actions">
-                <view class="detail-btn" bindtap="viewTripDetailMap">查看详情</view>
-                <view class="action-buttons">
-                  <button open-type="share" class="share-btn">分享更多</button>
+          <view class="trip-item" bindtap="viewTripDetailMap">
+            <view class="trip-left">
+              <view class="trip-header">
+                <text class="trip-title">法意12日舒适游</text>
+              </view>
+              <view class="trip-details">
+                <view class="trip-info-row">
+                  <view class="info-item">
+                    <text class="info-label">12天11晚</text>
+                  </view>
+                </view>
+                <view class="trip-info-row">
+                  <view class="info-item">
+                    <text class="info-label">16个地点</text>
+                  </view>
+                </view>
+                <view class="participants">
+                  <view class="participant-avatars">
+                    <image class="participant-avatar" src="{{userInfo.avatarUrl}}" mode="aspectFill"></image>
+                    <image class="participant-avatar" src="https://p0.inf.test.sankuai.com/haikesong/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
+                    <image class="participant-avatar" src="https://p0.inf.test.sankuai.com/haikesong/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
+                    <view class="trip-status">进行中...</view>
+                  </view>
                 </view>
               </view>
+            </view>
+            <view class="trip-right">
+              <image class="trip-scenery" src="https://p0.inf.test.sankuai.com/haikesong/1321a7f38543ea9619ea9a91d73fc15c121844.png" mode="aspectFill"></image>
             </view>
           </view>
           
           <!-- 日本7日游 -->
           <view class="trip-item">
-            <view class="trip-image-container">
-              <image class="trip-image" src="/images/8697ecc0-3128-45f6-a9a1-ee57a5fc0e31.png" mode="aspectFill"></image>
-              <view class="trip-duration">7天</view>
-            </view>
-            <view class="trip-info">
-              <text class="trip-title">日本 7 日深度游</text>
-              <view class="trip-actions">
-                <view class="detail-btn">查看详情</view>
-                <view class="action-buttons">
-                  <button open-type="share" class="share-btn">分享更多</button>
+            <view class="trip-left">
+              <view class="trip-header">
+                <text class="trip-title">日本7日深度游</text>
+              </view>
+              <view class="trip-details">
+                <view class="trip-info-row">
+                  <view class="info-item">
+                    <text class="info-label">7天6晚</text>
+                  </view>
+                </view>
+                <view class="trip-info-row">
+                  <view class="info-item">
+                    <text class="info-label">12个地点</text>
+                  </view>
+                </view>
+                <view class="participants">
+                  <view class="participant-avatars">
+                    <image class="participant-avatar" src="{{userInfo.avatarUrl}}" mode="aspectFill"></image>
+                    <image class="participant-avatar" src="https://p0.inf.test.sankuai.com/haikesong/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
+                    <view class="trip-status">进行中...</view>
+                  </view>
                 </view>
               </view>
+            </view>
+            <view class="trip-right">
+              <image class="trip-scenery" src="https://p0.inf.test.sankuai.com/haikesong/1321a7f38543ea9619ea9a91d73fc15c121844.png" mode="aspectFill"></image>
             </view>
           </view>
         </view>
