--- a/pages/featured-topics/featured-topics.wxml
+++ b/pages/featured-topics/featured-topics.wxml
@@ -27,9 +27,9 @@
       <!-- 巴黎购物一日游 -->
       <view class="topic-card" bindtap="viewOneDayDetail" data-title="巴黎购物一日游">
         <view class="topic-images">
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/43880025907dd07ce353b5f8d19a1490798878.png" mode="aspectFill"></image>
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/43880025907dd07ce353b5f8d19a1490798878.png" mode="aspectFill"></image>
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/43880025907dd07ce353b5f8d19a1490798878.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/43880025907dd07ce353b5f8d19a1490798878.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/43880025907dd07ce353b5f8d19a1490798878.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/43880025907dd07ce353b5f8d19a1490798878.png" mode="aspectFill"></image>
         </view>
         <view class="topic-content">
           <text class="topic-title">巴黎购物一日游</text>
@@ -47,9 +47,9 @@
       <!-- 马赛市集一日游 -->
       <view class="topic-card" bindtap="viewOneDayDetail" data-title="马赛市集一日游">
         <view class="topic-images">
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/8bf4cc6c61b595ac0be6c7a49911eaee739057.png" mode="aspectFill"></image>
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/8bf4cc6c61b595ac0be6c7a49911eaee739057.png" mode="aspectFill"></image>
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/8bf4cc6c61b595ac0be6c7a49911eaee739057.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/8bf4cc6c61b595ac0be6c7a49911eaee739057.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/8bf4cc6c61b595ac0be6c7a49911eaee739057.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/8bf4cc6c61b595ac0be6c7a49911eaee739057.png" mode="aspectFill"></image>
         </view>
         <view class="topic-content">
           <text class="topic-title">马赛市集一日游</text>
@@ -67,9 +67,9 @@
       <!-- 罗马古迹一日游 -->
       <view class="topic-card" bindtap="viewOneDayDetail" data-title="罗马古迹一日游">
         <view class="topic-images">
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/27acdbbfade30c2dcae927fa807a1e81648285.png" mode="aspectFill"></image>
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/27acdbbfade30c2dcae927fa807a1e81648285.png" mode="aspectFill"></image>
-          <image class="topic-image" src="https://p0.inf.test.sankuai.com/haikesong/27acdbbfade30c2dcae927fa807a1e81648285.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/27acdbbfade30c2dcae927fa807a1e81648285.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/27acdbbfade30c2dcae927fa807a1e81648285.png" mode="aspectFill"></image>
+          <image class="topic-image" src="https://p0.meituan.net/hackathonqjj/27acdbbfade30c2dcae927fa807a1e81648285.png" mode="aspectFill"></image>
         </view>
         <view class="topic-content">
           <text class="topic-title">罗马古迹一日游</text>
@@ -89,7 +89,7 @@
     <view class="content-container" wx:if="{{activeTab === 'featured'}}">
       <!-- 浮世传说 - 巴黎蒙马特高地旅记 -->
       <view class="featured-card" bindtap="viewFeaturedDetail" data-title="浮世传说 - 巴黎蒙马特高地旅记">
-        <image class="featured-image" src="https://p0.inf.test.sankuai.com/haikesong/bd48db7c41bdefb89efba8b9c267cafb932595.png" mode="aspectFill"></image>
+        <image class="featured-image" src="https://p0.meituan.net/hackathonqjj/bd48db7c41bdefb89efba8b9c267cafb932595.png" mode="aspectFill"></image>
         <view class="featured-content">
           <text class="featured-title">浮世传说 - 巴黎蒙马特高地旅记</text>
           <text class="featured-description">浮世传说 - 巴黎蒙马特高地札记有这么一个街区,既伫立着供奉耶稣圣心的天主教宗座圣殿,也承载着歌舞升平靡靡声色的红磨坊,既潜藏着属于黑夜的琳琅酒吧,也遍布着清新文艺的咖啡馆。</text>
@@ -98,7 +98,7 @@
 
       <!-- One Day in - 巴黎 -->
       <view class="featured-card" bindtap="viewFeaturedDetail" data-title="One Day in - 巴黎">
-        <image class="featured-image" src="https://p0.inf.test.sankuai.com/haikesong/0469c2fe682ff88b9e321e1194537dd12704874.png" mode="aspectFill"></image>
+        <image class="featured-image" src="https://p0.meituan.net/hackathonqjj/0469c2fe682ff88b9e321e1194537dd12704874.png" mode="aspectFill"></image>
         <view class="featured-content">
           <text class="featured-title">One Day in - 巴黎</text>
           <text class="featured-description">也许巴黎是你行程中的中转站,没有留给她太多时间,却又不想错过;也许巴黎会让你觉得过于城市气,不愿让冰离城市的休假被城市占据大久也许你直的口</text>
@@ -107,7 +107,7 @@
 
       <!-- 威尼斯水城漫记 -->
       <view class="featured-card" bindtap="viewFeaturedDetail" data-title="威尼斯水城漫记">
-        <image class="featured-image" src="https://p0.inf.test.sankuai.com/haikesong/bd48db7c41bdefb89efba8b9c267cafb932595.png" mode="aspectFill"></image>
+        <image class="featured-image" src="https://p0.meituan.net/hackathonqjj/bd48db7c41bdefb89efba8b9c267cafb932595.png" mode="aspectFill"></image>
         <view class="featured-content">
           <text class="featured-title">威尼斯水城漫记</text>
           <text class="featured-description">漫步在威尼斯的水巷中，感受这座水上城市的独特魅力，乘坐贡多拉穿梭在古老的建筑之间，体验意大利水城的浪漫与神秘。</text>
