--- a/pages/trip-plans/trip-plans.wxml
+++ b/pages/trip-plans/trip-plans.wxml
@@ -40,15 +40,15 @@
             <view class="participants">
               <view class="participant-avatars">
                 <image class="participant-avatar" src="{{userInfo.avatarUrl}}" mode="aspectFill"></image>
-                <image class="participant-avatar" src="https://p0.inf.test.sankuai.com/haikesong/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
-                <image class="participant-avatar" src="https://p0.inf.test.sankuai.com/haikesong/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
+                <image class="participant-avatar" src="https://p0.meituan.net/hackathonqjj/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
+                <image class="participant-avatar" src="https://p0.meituan.net/hackathonqjj/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
                 <view class="trip-status">进行中...</view>
               </view>
             </view>
           </view>
         </view>
         <view class="trip-right">
-          <image class="trip-scenery" src="https://p0.inf.test.sankuai.com/haikesong/1321a7f38543ea9619ea9a91d73fc15c121844.png" mode="aspectFill"></image>
+          <image class="trip-scenery" src="https://p0.meituan.net/hackathonqjj/1321a7f38543ea9619ea9a91d73fc15c121844.png" mode="aspectFill"></image>
         </view>
       </view>
       
@@ -72,14 +72,14 @@
             <view class="participants">
               <view class="participant-avatars">
                 <image class="participant-avatar" src="{{userInfo.avatarUrl}}" mode="aspectFill"></image>
-                <image class="participant-avatar" src="https://p0.inf.test.sankuai.com/haikesong/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
+                <image class="participant-avatar" src="https://p0.meituan.net/hackathonqjj/8a15ba3f510ddce04a0ffd2bbb6597cc3361.png" mode="aspectFill"></image>
                 <view class="trip-status">进行中...</view>
               </view>
             </view>
           </view>
         </view>
         <view class="trip-right">
-          <image class="trip-scenery" src="https://p0.inf.test.sankuai.com/haikesong/1321a7f38543ea9619ea9a91d73fc15c121844.png" mode="aspectFill"></image>
+          <image class="trip-scenery" src="https://p0.meituan.net/hackathonqjj/1321a7f38543ea9619ea9a91d73fc15c121844.png" mode="aspectFill"></image>
         </view>
       </view>
     </view>
